--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">AdamAsmacaOyunu</string>
     <string name="ayrac">_</string>
+    <string name="harfTahmin">Harf tahmin et.</string>
+    <string name="kelimeTahmin">Kelime tahmin et.</string>
 </resources>
